...
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SoundRecognitionFragment">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="18dp"
        android:layout_marginTop="18dp"
        android:text="Music Recognition"
        android:textColor="@color/white"
        android:textSize="28sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/start_recording"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/info_text"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"
        android:background="@drawable/mybutton"
        android:paddingHorizontal="12dp"
        android:text="Start Recording"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:visibility="visible" />

    <ImageView
        android:id="@+id/cover_art"
        android:layout_width="220dp"
        android:layout_height="186dp"
        android:layout_below="@id/title"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="94dp"
...
        android:id="@+id/info_text"
        android:layout_width="370dp"
        android:layout_height="125dp"
        android:layout_below="@id/cover_art"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"
        android:text="Input a sound sequence."
        android:textAlignment="center"
        android:textColor="@color/colorAccent"
        android:textSize="18sp" />

    <Button
        android:id="@+id/play_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/start_recording"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"
        android:background="@drawable/mybutton"
        android:paddingHorizontal="12dp"
        android:text="Search"
        android:textAllCaps="false"
        android:textSize="18sp" />

</RelativeLayout>

