...
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="18dp"
        android:layout_marginTop="18dp"
        android:text="Profile"
        android:textColor="@color/white"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.081"
        app:layout_constraintStart_toStartOf="parent"
...
        android:text="email@example.com"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="italic" />

    <EditText
        android:id="@+id/user_name"
        android:layout_width="231dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/user_email"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:layout_toEndOf="@id/name_label"
...
        android:text="Name:"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/save_button"
        android:layout_width="54dp"
        android:layout_height="58dp"
        android:layout_below="@id/user_email"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="11dp"
        android:layout_marginTop="5dp"
...
